[EW] FIX: The carousel should be always visible

--- a/EasyWebsite.API/Content/Site.less
+++ b/EasyWebsite.API/Content/Site.less
@@ -94,8 +94,10 @@
 }
 
 .carousel-container {
+    height: 100%;
+    max-width: 100%;
     .image-carousel {
-        max-width: 100%;
-        max-height: 100%;
+        width: 100%;
+        height: 100%;
     }
 }
